--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "remix-themes": "^2.0.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
